--- a/css/import.css
+++ b/css/import.css
@@ -4,3 +4,5 @@
 @import url(style.css);
 @import url(second-section.css);
 @import url(third-section.css);
+@import url(footer.css);
+@import url(var.css);
