--- a/css/second-section.css
+++ b/css/second-section.css
@@ -1,5 +1,5 @@
 .second-section__title {
-  color: #383A4C;
+  color: var(--black-color-text);
 text-align: center;
 font-family: Roboto;
 font-size: 35px;
@@ -17,7 +17,7 @@ margin-bottom: 25px;
 }
 
 .second-section__about-text {
-  color: #383A4C;
+  color: var(--black-color-text);
   text-align: center;
   font-size: 22px;
   font-weight: 500;
@@ -25,7 +25,7 @@ margin-bottom: 25px;
 }
 
 .second-section__paragraph {
-  color: #383A4C;
+  color: var(--black-color-text);
   text-align: center;
   font-style: normal;
   font-size: 18px;
@@ -48,7 +48,7 @@ margin-bottom: 25px;
 }
 
 .second-section__sign-text {
-  color: #383A4C;
+  color: var(--black-color-text);
   text-align: center;
   font-size: 20px;
   font-style: normal;
