--- a/css/first-section.css
+++ b/css/first-section.css
@@ -19,7 +19,7 @@
 }
 
 .first-section__number {
-  color: #FFF;
+  color: var(--main-color-text);
   text-align: center;
   font-size: 23.85px;
   font-weight: 400;
@@ -29,7 +29,7 @@
 .first-section__call-me {
   text-decoration: underline;
   text-align: center;
-  color: #FFF;
+  color: var(--main-color-text);
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
@@ -45,7 +45,7 @@
 
 .first-section__title-text {
   max-width: 990px;
-  color: rgba(255, 255, 255, 0.86);
+  color: var(--main-color-text);
   font-size: 52px;
   font-style: normal;
   font-weight: 900;
@@ -55,7 +55,7 @@
 
 .first-section__subtitle-text {
   max-width: 960px;
-  color: rgba(255, 255, 255, 0.75);
+  color: var(--main-color-text);
   font-size: 22px;
   font-style: normal;
   font-weight: 400;
@@ -65,7 +65,7 @@
 }
 
 .first-section__button {
-  color: #FFF;
+  color: var(--main-color-text);
   text-align: center;
   font-size: 20px;
   font-style: normal;
@@ -73,11 +73,10 @@
   line-height: 30px;
   padding: 12px 48px;
   border-radius: 50px;
-  background: #15A9CB;
-  box-shadow: 0px 4px 25px 0px rgba(21, 169, 203, 0.30);
+  background: var(--color-button-blue);
+  box-shadow: 0px 4px 25px 0px var(--box-shaddow);
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
   bottom: 120px;
-
 }
