--- a/css/third-section.css
+++ b/css/third-section.css
@@ -1,19 +1,18 @@
 .third-section {
   position: relative;
   background-image: url('../img/second-img.jpg');
-  background-repeat: no-repeat;
 }
 
-.third-section__footer {
+.third-section__post {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 17px;
-  margin-bottom: 50px;
+  margin-bottom: 17px;
 }
 
 .third-section__title-text {
-  color: #FFF;
+  color: var(--main-color-text);
   text-align: center;
   font-size: 35px;
   font-style: normal;
@@ -22,7 +21,7 @@
 }
 
 .third-section__subtitle-text {
-  color: rgba(255, 255, 255, 0.80);
+  color: var(--main-color-text);
   text-align: center;
   font-size: 22px;
   font-weight: 500;
@@ -32,7 +31,7 @@
 
 .third-section__decor {
   border-radius: 50px;
-  border: 1.382px solid #FFF;
+  border: 1.382px solid var(--main-color-text);
   padding-left: 26px;
   color: rgba(255, 255, 255, 0.50);
   font-size: 22px;
@@ -51,7 +50,7 @@
 }
 
 .third-section__button {
-  color: #FFF;
+  color: var(--main-color-text);
   text-align: center;
   font-size: 20px;
   font-style: normal;
@@ -59,8 +58,8 @@
   line-height: 30px;
   padding: 12px 48px;
   border-radius: 50px;
-  background: #15A9CB;
-  box-shadow: 0px 4px 25px 0px rgba(21, 169, 203, 0.30);
+  background: var(--color-button-blue);
+  box-shadow: 0px 4px 25px 0px var(--box-shaddow);
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
@@ -68,7 +67,7 @@
 }
 
 .third-section__p {
-  color: #FFF;
+  color: var(--main-color-text);
   text-align: center;
   font-size: 20px;
   font-style: normal;
@@ -78,5 +77,5 @@
 
 .third-section__agreement {
   text-decoration: underline;
-  color: #4A76A8;
+  color: var(--color-link);
 }
