--- a/css/first-section.css
+++ b/css/first-section.css
@@ -3,6 +3,7 @@
 .first-section {
   position: relative;
   background-image: url('../img/main-img.jpg');
+  padding-top: 40px;
 }
 
 .first-section__header {
@@ -61,7 +62,7 @@
   font-weight: 400;
   line-height: 140.625%; /* 30.938px */
   text-align: center;
-  margin-bottom: 218px;
+  margin-bottom: 258px;
 }
 
 .first-section__button {
