--- a/css/globalstyle.css
+++ b/css/globalstyle.css
@@ -78,17 +78,8 @@ section {
 .container {
   max-width: 1600px;
   margin: 0 auto;
-  padding: 70px 200px;
+  padding: 0 50px;
 }
 
-.container-spare {
-  max-width: 1600px;
-  margin: 0 auto;
-  padding: 40px 200px;
-}
 
-.container-mini {
-  max-width: 1600px;
-  margin: 0 auto;
-  padding: 45px 200px;
-}
+
