--- a/css/second-section.css
+++ b/css/second-section.css
@@ -1,3 +1,8 @@
+.second-section {
+  padding-top: 55px;
+  padding-bottom: 85px;
+}
+
 .second-section__title {
   color: var(--black-color-text);
 text-align: center;
