--- a/css/contacts.css
+++ b/css/contacts.css
@@ -1,10 +1,10 @@
-.third-section {
+.contacts {
   position: relative;
   background-image: url('../img/second-img.jpg');
   padding: 70px 0;
 }
 
-.third-section__post {
+.contacts__post {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -12,7 +12,7 @@
   margin-bottom: 17px;
 }
 
-.third-section__title-text {
+.contacts__title-text {
   color: var(--main-color-text);
   text-align: center;
   font-size: 35px;
@@ -21,7 +21,7 @@
   line-height: normal;
 }
 
-.third-section__subtitle-text {
+.contacts__subtitle-text {
   color: var(--main-color-text);
   text-align: center;
   font-size: 22px;
@@ -30,7 +30,7 @@
   margin-bottom: 50px;
 }
 
-.third-section__decor {
+.contacts__decor {
   border-radius: 50px;
   border: 1.382px solid var(--main-color-text);
   padding-left: 26px;
@@ -42,7 +42,7 @@
   height: 44px;
 }
 
-.third-section__select-data {
+.contacts__select-data {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -50,7 +50,7 @@
   margin-bottom: 148px;
 }
 
-.third-section__button {
+.contacts__button {
   color: var(--main-color-text);
   text-align: center;
   font-size: 20px;
@@ -67,7 +67,7 @@
   bottom: 144px;
 }
 
-.third-section__p {
+.contacts__p {
   color: var(--main-color-text);
   text-align: center;
   font-size: 20px;
@@ -76,7 +76,7 @@
   line-height: normal;
 }
 
-.third-section__agreement {
+.contacts__agreement {
   text-decoration: underline;
   color: var(--color-link);
 }
