--- a/css/present.css
+++ b/css/present.css
@@ -1,25 +1,25 @@
 
 
-.first-section {
+.present {
   position: relative;
   background-image: url('../img/main-img.jpg');
   padding-top: 40px;
 }
 
-.first-section__header {
+.present__header {
   display: flex;
   justify-content: space-between;
   margin-bottom: 120px;
 }
 
-.first-section__contacts {
+.present__contacts {
   display: flex;
   flex-direction: column;
   justify-content: center;
   row-gap: 2.85px;
 }
 
-.first-section__number {
+.present__number {
   color: var(--main-color-text);
   text-align: center;
   font-size: 23.85px;
@@ -27,7 +27,7 @@
   line-height: normal;
 }
 
-.first-section__call-me {
+.present__call-me {
   text-decoration: underline;
   text-align: center;
   color: var(--main-color-text);
@@ -37,14 +37,14 @@
   line-height: normal;
 }
 
-.first-section__title {
+.present__title {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 35px;
 }
 
-.first-section__title-text {
+.present__title-text {
   max-width: 990px;
   color: var(--main-color-text);
   font-size: 52px;
@@ -54,7 +54,7 @@
   margin: 0;
 }
 
-.first-section__subtitle-text {
+.present__subtitle-text {
   max-width: 960px;
   color: var(--main-color-text);
   font-size: 22px;
@@ -65,7 +65,7 @@
   margin-bottom: 258px;
 }
 
-.first-section__button {
+.present__button {
   color: var(--main-color-text);
   text-align: center;
   font-size: 20px;
@@ -80,4 +80,84 @@
   left: 50%;
   transform: translateX(-50%);
   bottom: 120px;
+}
+
+/* 1024 */
+
+@media (max-width: 1024px) {
+  .container {
+    padding: 0 30px;
+  }
+  .present {
+    padding-top: 20px;
+  }
+  .present__header {
+    margin-bottom: 70px;
+  }
+  .present__logo {
+    width: 60px;
+    height: 60px;
+  }
+  .present__number {
+    font-size: 21px;
+  }
+  .present__call-me {
+    font-size: 13px;
+  }
+  .present__title {
+    gap: 27.57px;
+  }
+  .present__title-text {
+    font-size: 40px;
+  }
+  .present__subtitle-text {
+    font-size: 18px;
+    width: 754px;
+    margin-bottom: 178.43px;
+  }
+  .present__button {
+    bottom: 70px;
+  }
+}
+
+@media (max-width: 780px) {
+  .container {
+    padding: 0 20px;
+  }
+
+}
+
+@media (max-width: 320px) {
+  .container {
+    padding: 0 15px;
+  }
+
+  .present__logo {
+    width: 30px;
+    height: 30px;
+  }
+
+  .present__contacts {
+
+  }
+  .present__number {
+    display: none;
+  }
+  .present__call-me {
+    display: none;
+  }
+
+  .present__title-text {
+    font-size: 20px;
+  }
+
+  .present__subtitle-text {
+    width: 290px;
+    font-size: 14px;
+    color: rgba(255, 255, 255, 0.75);
+  }
+
+  .present__button {
+    font-size: 20px;
+  }
 }
