--- a/css/present.css
+++ b/css/present.css
@@ -128,24 +128,6 @@
 }
 
 @media (max-width: 320px) {
-  .container {
-    padding: 0 15px;
-  }
-
-  .present__logo {
-    width: 30px;
-    height: 30px;
-  }
-
-  .present__contacts {
-
-  }
-  .present__number {
-    display: none;
-  }
-  .present__call-me {
-    display: none;
-  }
 
   .present__title-text {
     font-size: 20px;
@@ -160,4 +142,38 @@
   .present__button {
     font-size: 20px;
   }
+  .container {
+    padding: 0 15px;
+  }
+
+  .present__logo {
+    width: 30px;
+    height: 30px;
+  }
+    
+  .present__call-me {
+    display: none;
+  }
+
+  .present__number {
+    display: none;
+  }
+
+  .present__contacts::before {
+    content: "";
+    margin-right: 15px;
+    padding-top: 18px;
+    background: url('../img/phone-logo.svg');
+    z-index: 1;
+    width: 24px;
+    height: 24px;
+    background-repeat: no-repeat;
+  }
+
+  .present__button {
+    font-size: 16px;
+    line-height: normal;
+    padding: 10px 28px;
+  }
+
 }
