--- a/css/contacts.css
+++ b/css/contacts.css
@@ -74,9 +74,55 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  
 }
 
 .contacts__agreement {
   text-decoration: underline;
   color: var(--color-link);
+}
+
+@media (max-width: 325px) {
+  .container {
+    max-width: 320px;
+    margin: 0 auto;
+    padding: 0 15px;
+  }
+  .contacts {
+    padding: 30px 0;
+    height: 398px;
+  }
+  .contacts__title-text {
+    font-size: 20px;
+  }
+  .contacts__subtitle-text {
+    font-size: 12px;
+    margin-bottom: 35px;
+  }
+  .contacts__decor {
+    font-size: 14px;
+    width: 220px;
+    height: 28px;
+  }
+
+  .contacts__select-data {
+    gap: 15px;
+    margin-bottom: 45px;
+  }
+
+  .contacts__button {
+    font-size: 16px;
+    width: 174px;
+    height: 38px;
+    padding: 0;
+    bottom: 85px;
+  }
+
+  .contacts__p  {
+    font-size: 11px;
+    position: relative;
+    bottom: -64px;
+    
+  }
+
 }
