--- a/css/footer.css
+++ b/css/footer.css
@@ -55,3 +55,92 @@
   justify-content: space-between;
   align-items: center;
 }
+
+@media (max-width: 1024px) {
+  .footer {
+    padding: 40px 30px;
+  }
+
+  .footer__bunch {
+    padding: 0;
+  }
+
+  .footer__logo {
+    width: 60px;
+    height: 60px;
+  }
+
+  .footer__company {
+    font-size: 8px;
+    white-space: nowrap;
+  }
+  .footer__union {
+    gap: 19px;
+  }
+
+  .footer__made-by {
+    font-size: 12px;
+    
+  }
+  .footer__number {
+    font-size: 21px;
+  }
+
+  .footer__call-me {
+    font-size: 13px;
+  }
+
+  .footer__contacts {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+  }
+}
+
+@media (max-width: 320px) {
+
+  .footer {
+    padding: 25px 0;
+    height: 127px;
+  }
+
+  .container {
+    padding: 0 15px;
+  }
+
+  .footer__logo {
+    width: 30.104px;
+    height: 30px;
+  }
+  .footer__number {
+    display: none;
+  }
+  .footer__call-me {
+    display: none;
+  }
+
+  .footer__contacts {
+    content: "";
+    background: url('../img/phone-logo.svg');
+    z-index: 1;
+    width: 25px;
+    height: 24px;
+    background-repeat: no-repeat;
+  }
+
+  .footer__made-by {
+    font-size: 12px;
+    color: rgba(255, 255, 255, 0.50);
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 0;
+    background-color: #2A2C3F;
+    width: 320px;
+    height: 47px;
+    text-align: center;
+    vertical-align: bottom;
+    padding-top: 15px;
+  }
+
+}
