--- a/css/main.css
+++ b/css/main.css
@@ -58,5 +58,80 @@ margin-bottom: 25px;
   font-size: 20px;
   font-style: normal;
   font-weight: 500;
-  line-height: 140.625%; /* 28.125px */
+  line-height: 140.625%; 
   }
+
+  /*================МЕДИАЗАПРОСЫ===============*/
+
+  /*1024*/
+
+  @media (max-width: 1024px) {
+    .main {
+      padding: 70px 0;
+    }
+    .container {
+      max-width: 1024px;
+      margin: 0 auto;
+      padding: 0 20px;
+    }
+    .main__title {
+      font-size: 32px; 
+    }
+    .main__about-text {
+      font-size: 20px;
+    }
+    .main__about-hyphen {
+      width: 40px;
+    }
+    .main__paragraph {
+      font-size: 16px;
+    }
+    .main__about {
+      gap: 22px;
+    }
+    .main__about {
+      margin-bottom: 33px;
+    }
+    .main__sign-text {
+      font-size: 18px;
+    }
+}
+
+@media (max-width: 320px) {
+  .main {
+    padding: 30px 0  60px;
+  }
+  .container {
+    max-width: 320px;
+    margin: 0 auto;
+    padding: 0 15px;
+  }
+  .main__title {
+    font-size: 20px;
+  }
+  .main__about-text {
+    font-size: 16px;
+  }
+
+  .main__about-hyphen {
+    width: 19.7px;
+  }
+
+  .main__paragraph {
+    max-width: 290px;
+  }
+
+  .main__block-circle {
+    flex-direction: column;
+    gap: 40px;
+  }
+
+  .main__group-img-sign {
+    row-gap: 20px;
+  }
+
+  .main__sign-text {
+    font-size: 18px;
+  }
+
+}
