--- a/css/header.css
+++ b/css/header.css
@@ -1,25 +1,30 @@
 
 
-.present {
+.header {
   position: relative;
   background-image: url('../img/main-img.jpg');
   padding-top: 40px;
+  display: flex;
+  justify-content: center; 
+  
 }
 
-.present__header {
+.header__menu {
+  width: 1200px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 924px;
   margin-bottom: 120px;
 }
 
-.present__contacts {
+.header__contacts {
   display: flex;
   flex-direction: column;
   justify-content: center;
   row-gap: 2.85px;
 }
 
-.present__number {
+.header__number {
   color: var(--main-color-text);
   text-align: center;
   font-size: 23.85px;
@@ -27,7 +32,7 @@
   line-height: normal;
 }
 
-.present__call-me {
+.header__call-me {
   text-decoration: underline;
   text-align: center;
   color: var(--main-color-text);
@@ -37,14 +42,14 @@
   line-height: normal;
 }
 
-.present__title {
+.header__title {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 35px;
 }
 
-.present__title-text {
+.header__title-text {
   max-width: 990px;
   color: var(--main-color-text);
   font-size: 52px;
@@ -54,7 +59,7 @@
   margin: 0;
 }
 
-.present__subtitle-text {
+.header__subtitle-text {
   max-width: 960px;
   color: var(--main-color-text);
   font-size: 22px;
@@ -65,7 +70,7 @@
   margin-bottom: 258px;
 }
 
-.present__button {
+.header__button {
   color: var(--main-color-text);
   text-align: center;
   font-size: 20px;
@@ -88,34 +93,34 @@
   .container {
     padding: 0 30px;
   }
-  .present {
+  .header {
     padding-top: 20px;
   }
-  .present__header {
+  .header__menu {
     margin-bottom: 70px;
   }
-  .present__logo {
+  .header__logo {
     width: 60px;
     height: 60px;
   }
-  .present__number {
+  .header__number {
     font-size: 21px;
   }
-  .present__call-me {
+  .header__call-me {
     font-size: 13px;
   }
-  .present__title {
+  .header__title {
     gap: 27.57px;
   }
-  .present__title-text {
+  .header__title-text {
     font-size: 40px;
   }
-  .present__subtitle-text {
+  .header__subtitle-text {
     font-size: 18px;
     width: 754px;
     margin-bottom: 178.43px;
   }
-  .present__button {
+  .header__button {
     bottom: 70px;
   }
 }
@@ -129,37 +134,37 @@
 
 @media (max-width: 320px) {
 
-  .present__title-text {
+  .header__title-text {
     font-size: 20px;
   }
 
-  .present__subtitle-text {
+  .header__subtitle-text {
     width: 290px;
     font-size: 14px;
     color: rgba(255, 255, 255, 0.75);
   }
 
-  .present__button {
+  .header__button {
     font-size: 20px;
   }
   .container {
     padding: 0 15px;
   }
 
-  .present__logo {
+  .header__logo {
     width: 30px;
     height: 30px;
   }
     
-  .present__call-me {
+  .header__call-me {
     display: none;
   }
 
-  .present__number {
+  .header__number {
     display: none;
   }
 
-  .present__contacts::before {
+  .header__contacts::before {
     content: "";
     padding-top: 18px;
     background: url('../img/phone-logo.svg');
@@ -168,7 +173,7 @@
     background-repeat: no-repeat;
   }
 
-  .present__button {
+  .header__button {
     font-size: 16px;
     line-height: normal;
     padding: 10px 28px;
