--- a/css/import.css
+++ b/css/import.css
@@ -2,7 +2,7 @@
 @import url(style.css);
 @import url(var.css);
 @import url(normalize.css);
-@import url(present.css);
+@import url(header.css);
 @import url(main.css);
 @import url(contacts.css);
 @import url(footer.css); 
