--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,25 @@ margin-bottom: 25px;
   line-height: normal;
 }
 
+.main__about-text::before {
+  content: " ";
+  background-color: #383A4C;;
+  width: 43px;
+  height: 2px;
+  display: inline-block;
+  margin-bottom: 6px;
+  margin-right: 23px;
+}
+
+.main__about-text::after {
+  content: " ";
+  background-color: #383A4C;;
+  width: 43px;
+  height: 2px;
+  display: inline-block;
+  margin: 0 0 6px 23px;
+}
+
 .main__paragraph {
   color: var(--black-color-text);
   text-align: center;
@@ -53,6 +72,7 @@ margin-bottom: 25px;
 }
 
 .main__sign-text {
+  max-width: 196px;
   color: var(--black-color-text);
   text-align: center;
   font-size: 20px;
