--- a/css/header.css
+++ b/css/header.css
@@ -1,10 +1,13 @@
 
 .header {
-  background-repeat:no-repeat;
-  background-size: cover;
-  background-image: url('../img/main-img.jpg');
+  position: absolute;
   padding-top: 40px;
   padding-bottom: 120px;
+  left: 0;
+  right: 0;
+  top: 0;
+  background: transparent;
+  z-index: 10;
 }
 
 .header__menu {
@@ -42,15 +45,18 @@
   line-height: normal;
 }
 
-.header__title {
+.description__title {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 35px;
+  background-repeat:no-repeat;
+  background-image: url('../img/main-img.jpg');
 }
 
-.header__title-text {
+.description__title-text {
   max-width: 990px;
+  padding-top: 228px;
   color: var(--main-color-text);
   font-size: 52px;
   font-style: normal;
@@ -81,6 +87,7 @@
   border-radius: 50px;
   background: var(--color-button-blue);
   box-shadow: 0px 4px 25px 0px var(--box-shaddow);
+  margin-bottom: 120px;
 }
 
 /* 1024 */
