--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,6 @@
 .footer {
   background-image: url('../img/background-footer.jpg');
-  width: 100%;
+  max-width: 1600px;
   padding: 45px 0;
 }
 
@@ -52,6 +52,7 @@
 }
 
 .footer__bunch {
+  max: width 1200px;
   display: flex;
   justify-content: space-between;
   align-items: center;
