--- a/css/header.css
+++ b/css/header.css
@@ -2,7 +2,6 @@
 .header {
   position: absolute;
   padding-top: 40px;
-  padding-bottom: 120px;
   left: 0;
   right: 0;
   top: 0;
@@ -10,14 +9,13 @@
   z-index: 10;
 }
 
-.header__menu {
+.header__container {
   margin: 0 auto;
   width: 1200px;
   display: flex;
   justify-content: center;
   gap: 924px;
   margin-bottom: 120px;
-  
 }
 
 .header__contacts {
