--- a/css/header.css
+++ b/css/header.css
@@ -14,8 +14,7 @@
   width: 1200px;
   display: flex;
   justify-content: center;
-  gap: 924px;
-  margin-bottom: 120px;
+  gap: 828px;
 }
 
 .header__contacts {
@@ -52,6 +51,18 @@
   background-image: url('../img/main-img.jpg');
 }
 
+.description-title::before {
+  width: 100%;
+  height: 100%;
+  content: '';
+  position:absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: url('../img/fill-img-main.svg')
+}
+
 .description__title-text {
   max-width: 990px;
   padding-top: 228px;
@@ -76,9 +87,6 @@
 
 .header__button {
   color: var(--main-color-text);
-  text-align: center;
-  font-size: 20px;
-  font-style: normal;
   font-weight: 500;
   line-height: 30px;
   padding: 12px 48px;
