--- a/css/description.css
+++ b/css/description.css
@@ -16,8 +16,7 @@
   left: 0;
   width: 100%;
   height: 670px;
-  background: linear-gradient( rgba(47, 50, 75, 0.50), rgba(47, 50, 75, 0.85) 41%);
-  z-index: 1;
+  background: linear-gradient( rgba(47, 50, 75, 0.50), rgba(47, 50, 75, 0.55) 80%);
 }
 
 .description__title-text {
@@ -28,4 +27,15 @@
   font-style: normal;
   font-weight: 900;
   text-align: center;
+}
+
+.description__button {
+  color: var(--main-color-text);
+  font-weight: 500;
+  line-height: 30px;
+  padding: 12px 48px;
+  border-radius: 50px;
+  background: var(--color-button-blue);
+  box-shadow: 0px 4px 25px 0px var(--box-shaddow);
+  margin-bottom: 120px;
 }
