--- a/css/description.css
+++ b/css/description.css
@@ -1,22 +1,36 @@
+.description__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 35px;
+}
 
-
-.description__title {
+.description {
+  position: relative;
+  max-width: 1600px;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 35px;
   background-repeat: no-repeat;
   background-image: url('../img/main-img.jpg');
+  background: cover;
+  background-position: center;
 }
-
-.description__title::before {
+/* псевдоэлемент для создания градиента с тенями значения взял из фигмы*/
+.description::before {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 670px;
-  background: linear-gradient( rgba(47, 50, 75, 0.50), rgba(47, 50, 75, 0.55) 80%);
+  height: 100%;
+  background: rgba(47, 50, 75, 0.85);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+/* это дополнительный класс чтобы применить индекс и позиционировать текст над градиентом*/
+.description__dop {
+  z-index: 1;
 }
 
 .description__title-text {
@@ -29,6 +43,17 @@
   text-align: center;
 }
 
+.description__subtitle-text {
+  max-width: 960px;
+  color: var(--main-color-text);
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140.625%; /* 30.938px */
+  text-align: center;
+  margin-bottom: 55px;
+}
+
 .description__button {
   color: var(--main-color-text);
   font-weight: 500;
@@ -39,3 +64,4 @@
   box-shadow: 0px 4px 25px 0px var(--box-shaddow);
   margin-bottom: 120px;
 }
+
