--- a/css/description.css
+++ b/css/description.css
@@ -2,12 +2,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 35px;
 }
 
 .description {
   position: relative;
-  max-width: 1600px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,6 +14,9 @@
   background-image: url('../img/main-img.jpg');
   background-size: cover;
   background-position: center;
+  padding-top: 228px;
+  padding-bottom: 120px;
+  
 }
 /* псевдоэлемент для создания градиента с тенями значения взял из фигмы*/
 .description::before {
@@ -35,12 +36,12 @@
 
 .description__title-text {
   max-width: 990px;
-  padding-top: 228px;
   color: var(--main-color-text);
   font-size: 52px;
   font-style: normal;
   font-weight: 900;
   text-align: center;
+  margin-bottom: 35px;
 }
 
 .description__subtitle-text {
@@ -51,7 +52,7 @@
   font-weight: 400;
   line-height: 140.625%; /* 30.938px */
   text-align: center;
-  margin-bottom: 55px;
+  margin-bottom: 90px;
 }
 
 .description__button {
@@ -62,6 +63,5 @@
   border-radius: 50px;
   background: var(--color-button-blue);
   box-shadow: 0px 4px 25px 0px var(--box-shaddow);
-  margin-bottom: 120px;
 }
 
