--- a/css/contacts.css
+++ b/css/contacts.css
@@ -66,7 +66,7 @@
   border-radius: 50px;
   background: var(--color-button-blue);
   box-shadow: 0px 4px 25px 0px var(--box-shaddow);
-  margin-bottom: 50px;;
+  margin-bottom: 50px;
 }
 
 .contacts__p {
