--- a/css/header.css
+++ b/css/header.css
@@ -13,8 +13,7 @@
   margin: 0 auto;
   max-width: 1600px;
   display: flex;
-  justify-content: center;
-  gap: 828px;
+  justify-content: space-between;
 }
 
 .header__contacts {
