--- a/css/footer.css
+++ b/css/footer.css
@@ -5,40 +5,29 @@
 }
 
 .footer__company {
-  text-align: center;
+  max-width: 126.997px;
   color: var(--main-color-text);
   font-size: 12px;
-  font-style: normal;
   font-weight: 500;
-  line-height: 140.625%; /* 16.875px */
 }
 
 .footer__made-by {
-  max-width: 126.997px;;
   color: var(--main-color-text);
   font-size: 12px;
-  font-style: normal;
   font-weight: 500;
-  line-height: 140.625%; /* 16.875px */
 }
 
 .footer__number {
   color: var(--main-color-text);
-  /* text-align: center; */
   font-size: 24px;
-  font-style: normal;
   font-weight: 400;
-  line-height: normal;
 }
 
 .footer__call-me {
   text-decoration: underline;
-  text-align: center;
   color: var(--main-color-text);
   font-size: 16px;
-  font-style: normal;
   font-weight: 400;
-  line-height: normal;
 }
 
 .footer__contacts {
