--- a/css/contacts.css
+++ b/css/contacts.css
@@ -16,7 +16,7 @@
 .contacts__title-text {
   color: var(--main-color-text);
   text-align: center;
-  font-size: 35px;
+  font-size: clamp(1.25rem, 1.016rem + 1.17vw, 2.188rem);
   font-style: normal;
   font-weight: 700;
   line-height: normal;
@@ -25,7 +25,7 @@
 .contacts__subtitle-text {
   color: var(--main-color-text);
   text-align: center;
-  font-size: 22px;
+  font-size: clamp(0.75rem, 0.594rem + 0.78vw, 1.375rem);
   font-weight: 500;
   line-height: normal;
   margin-bottom: 50px;
@@ -58,7 +58,7 @@
 .contacts__button {
   color: var(--main-color-text);
   text-align: center;
-  font-size: 20px;
+  font-size: clamp(1rem, 0.938rem + 0.31vw, 1.25rem);
   font-style: normal;
   font-weight: 500;
   line-height: 30px;
@@ -72,7 +72,7 @@
 .contacts__p {
   color: var(--main-color-text);
   text-align: center;
-  font-size: 20px;
+  font-size: clamp(0.688rem, 0.547rem + 0.7vw, 1.25rem);
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -82,6 +82,12 @@
 .contacts__agreement {
   text-decoration: underline;
   color: var(--color-link);
+}
+
+@media (max-width:470px) {
+  .contacts__decor {
+    width: 320px;
+  }
 }
 
 @media (max-width: 325px) {
@@ -117,14 +123,16 @@
     width: 174px;
     height: 38px;
     padding: 0;
-    bottom: 85px;
   }
 
   .contacts__p  {
     font-size: 11px;
     position: relative;
     bottom: -64px;
-    
+  }
+
+  .contacts__agreement {
+    display: none;
   }
 
 }
