--- a/css/description.css
+++ b/css/description.css
@@ -34,7 +34,7 @@
 .description__title-text {
   max-width: 990px;
   color: var(--main-color-text);
-  font-size: 52px;
+  font-size: clamp(1.25rem, 0.75rem + 2.5vw, 3.25rem);
   font-style: normal;
   font-weight: 900;
   text-align: center;
@@ -44,16 +44,16 @@
 .description__subtitle-text {
   max-width: 960px;
   color: var(--main-color-text);
-  font-size: 22px;
+  font-size: clamp(0.875rem, 0.75rem + 0.63vw, 1.375rem);
   font-style: normal;
   font-weight: 400;
-  line-height: 140.625%; /* 30.938px */
   text-align: center;
   margin-bottom: 90px;
 }
 
 .description__button {
   color: var(--main-color-text);
+  font-size: clamp(1rem, 0.938rem + 0.31vw, 1.25rem);
   font-weight: 500;
   line-height: 30px;
   padding: 12px 48px;
@@ -62,3 +62,28 @@
   box-shadow: 0px 4px 25px 0px var(--box-shaddow);
 }
 
+/* ==========media============================ */
+
+@media (max-width:320px) {
+  .description__title-text {
+    font-size: 20px;
+    max-width: 290px;
+  }
+
+  .description__button {
+    font-size: 16px;
+    width: 160px;
+    height: 38px;
+    padding: 0px 40px;
+  }
+
+  .description__subtitle-text {
+    font-size: 14px;
+  }
+}
+
+@media (max-width:520px) {
+  .description__title-text {
+    font-size: 25px;
+  }
+}
