--- a/css/footer.css
+++ b/css/footer.css
@@ -19,14 +19,14 @@
 
 .footer__number {
   color: var(--main-color-text);
-  font-size: 24px;
+  font-size: clamp(0.75rem, 0.483rem + 1.02vw, 1.5rem);
   font-weight: 400;
 }
 
 .footer__call-me {
   text-decoration: underline;
   color: var(--main-color-text);
-  font-size: 16px;
+  font-size: clamp(1rem, 0.938rem + 0.31vw, 1.25rem);
   font-weight: 400;
 }
 
@@ -45,6 +45,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+@media (max-width: 1600px) {
+  .footer__call-me {
+    font-size: 16px;
+  }
 }
 
 @media (max-width: 1024px) {
@@ -88,11 +94,45 @@
   }
 }
 
+@media (max-width: 720px) {
+  .footer__call-me {
+    font-size: 13px;
+  }
+
+  .footer__made-by {
+  display: none;
+  }
+
+  .footer__contacts {
+    content: "";
+    background: url('../img/phone-footer.svg');
+    z-index: 1;
+    width: 60px;
+    height: 50px;
+    background-repeat: no-repeat;
+  }
+  .footer__number {
+    display: none;
+  }
+  .footer__call-me {
+    display: none;
+  }
+}
+
+@media (max-width: 370px) {
+  .footer__company {
+    white-space: wrap;
+}
+  .footer__call-me {
+    font-size: 13px;
+}
+}
+
 @media (max-width: 320px) {
 
   .footer {
     padding: 25px 0;
-    height: 127px;
+    max-height: 127px;
   }
 
   .container {
@@ -100,8 +140,8 @@
   }
 
   .footer__logo {
-    width: 30.104px;
-    height: 30px;
+    max-width: 30.104px;
+    max-height: 30px;
   }
   .footer__number {
     display: none;
@@ -132,6 +172,12 @@
     text-align: center;
     vertical-align: bottom;
     padding-top: 15px;
+  }
+
+  .footer__company {
+    font-size: 8px;
+    white-space: wrap;
+    max-width: 87px;
   }
 
 }
