--- a/css/import.css
+++ b/css/import.css
@@ -3,7 +3,7 @@
 @import url(style.css);
 @import url(var.css);
 @import url(header.css);
-@import url(main.css);
+@import url(advantage.css);
 @import url(contacts.css);
 @import url(footer.css); 
 @import url(description.css);
