--- a/css/globalstyle.css
+++ b/css/globalstyle.css
@@ -81,5 +81,35 @@ section {
   padding: 0 50px;
 }
 
+@media (max-width: 1200px) {
+  .container {
+    padding: 0 20px;
+  }
+}
 
+@media (max-width: 780px) {
+  .container {
+    padding: 0 20px;
+  }
+}
 
+@media (max-width: 425px) {
+  .container {
+    padding: 0 20px;
+  }
+}
+
+@media (max-width: 325px) {
+  .container {
+    max-width: 320px;
+    margin: 0 auto;
+    padding: 0 15px;
+  }
+}
+
+@media (max-width: 320px) {
+
+  .container {
+    padding: 0 15px;
+  }
+}
