--- a/css/contacts.css
+++ b/css/contacts.css
@@ -48,7 +48,6 @@
   flex-direction: column;
   align-items: center;
   gap: 21px;
-  margin-bottom: 14px;
 }
 
 .contacts__e-mail {
@@ -66,7 +65,6 @@
   border-radius: 50px;
   background: var(--color-button-blue);
   box-shadow: 0px 4px 25px 0px var(--box-shaddow);
-  margin-bottom: 50px;
 }
 
 .contacts__p {
@@ -76,7 +74,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  
+  padding-top: 50px;
 }
 
 .contacts__agreement {
@@ -91,11 +89,7 @@
 }
 
 @media (max-width: 325px) {
-  .container {
-    max-width: 320px;
-    margin: 0 auto;
-    padding: 0 15px;
-  }
+
   .contacts {
     padding: 30px 0;
     height: 398px;
