--- a/css/description.css
+++ b/css/description.css
@@ -16,7 +16,7 @@
   background-size: cover;
   background-position: center;
   padding-top: 228px;
-  padding-bottom: 120px;
+  padding-bottom: 179px;
   
 }
 /* псевдоэлемент для создания градиента с тенями значения взял из фигмы*/
@@ -32,23 +32,27 @@
 }
 
 .description__title-text {
-  max-width: 990px;
+  max-width: 1036px;
   color: var(--main-color-text);
   font-size: clamp(1.25rem, 0.75rem + 2.5vw, 3.25rem);
   font-style: normal;
   font-weight: 900;
   text-align: center;
   margin-bottom: 35px;
+  padding-left: 92px;
 }
 
 .description__subtitle-text {
-  max-width: 960px;
+  max-width: 1135px;
   color: var(--main-color-text);
   font-size: clamp(0.875rem, 0.75rem + 0.63vw, 1.375rem);
   font-style: normal;
   font-weight: 400;
   text-align: center;
-  margin-bottom: 90px;
+  margin-bottom: 94px;
+  line-height: 143.625%;
+  font-size: 23px;
+  padding-left: 99px;
 }
 
 .description__button {
@@ -56,10 +60,13 @@
   font-size: clamp(1rem, 0.938rem + 0.31vw, 1.25rem);
   font-weight: 500;
   line-height: 30px;
-  padding: 12px 48px;
+  padding: 11px 44px;
   border-radius: 50px;
   background: var(--color-button-blue);
   box-shadow: 0px 4px 25px 0px var(--box-shaddow);
+  position: absolute;
+  left: 740px;
+  bottom: 127px;
 }
 
 /* ==========media============================ */
