--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,7 @@
 
 .header {
   position: absolute;
-  padding-top: 40px;
+  padding-top: 27px;
   left: 0;
   right: 0;
   top: 0;
@@ -9,18 +9,28 @@
   z-index: 10;
 }
 
+.header__logo {
+  width: 68px;
+  height: 68px;
+  position: relative;
+  right: 18px;
+  top: 3px;
+}
+
 .header__container {
   margin: 0 auto;
   max-width: 1600px;
+  height: 70px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 979px;
+  padding-left: 173px;
 }
 
 .header__contacts {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  row-gap: 2.85px;
 }
 
 .header__number {
@@ -29,6 +39,10 @@
   font-size: clamp(1rem, 0.876rem + 0.61vw, 1.491rem);
   font-weight: 400;
   line-height: normal;
+  letter-spacing: -1px;
+  position: relative;
+  right: 14px;
+  top: 3px;
 }
 
 .header__call-me {
@@ -39,6 +53,10 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  position: relative;
+  right: 15px;
+  top: 3px;
+  letter-spacing: -1px;
 }
 
 
