--- a/css/header.css
+++ b/css/header.css
@@ -20,9 +20,7 @@
 .header__container {
   margin: 0 auto;
   display: flex;
-  justify-content: center;
-  gap: 609px;
-
+  justify-content: space-between;
 }
 
 .header__contacts {
