--- a/css/advantage.css
+++ b/css/advantage.css
@@ -11,14 +11,12 @@ font-style: normal;
 font-weight: 700;
 line-height: normal;
 margin-bottom: 25px;
-letter-spacing: -1px;
-padding-left: 89px;
 }
 
 .advantage__about {
   display: flex;
   justify-content: center;
-  gap: 24px;
+  gap: 25px;
   margin-bottom: 35px;
 }
 
@@ -28,8 +26,6 @@ padding-left: 89px;
   font-size: clamp(1rem, 0.906rem + 0.47vw, 1.375rem);
   font-weight: 500;
   line-height: normal;
-  position: relative;
-  left: 45px;
 }
 
 .advantage__about-text::before {
@@ -57,19 +53,14 @@ padding-left: 89px;
   font-style: normal;
   font-size: clamp(0.75rem, 0.656rem + 0.47vw, 1.125rem);
   font-weight: 400;
-  line-height: 124.625%;
-  margin-bottom: 69px;
-  position: relative;
-  left: 47px;
-  letter-spacing: -1px;
+  line-height: 137.625%;
+  margin-bottom: 60px;
 }
 
 .advantage__block-circle {
   display: flex;
   justify-content: center;
-  gap: 35px;
-  position: relative;
-  left: 46px;
+  gap: 21px;
 }
 
 .advantage__group-img-sign {
@@ -86,9 +77,8 @@ padding-left: 89px;
   font-size: clamp(1.125rem, 1.094rem + 0.16vw, 1.25rem);
   font-style: normal;
   font-weight: 500;
-  letter-spacing: -2px;
-
-  }
+  line-height: 27px;
+}
 
   /*================МЕДИАЗАПРОСЫ===============*/
 
