--- a/css/contacts.css
+++ b/css/contacts.css
@@ -9,9 +9,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 17px;
   margin-bottom: 17px;
-  padding-top: 7px;
 }
 
 .contacts__title-text {
@@ -21,9 +19,7 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  left: 32px;
-  position: relative;
-  letter-spacing: -1px;
+  padding-right: 25px;
 }
 
 .contacts__subtitle-text {
@@ -32,10 +28,7 @@
   font-size: clamp(0.75rem, 0.594rem + 0.78vw, 1.375rem);
   font-weight: 500;
   line-height: normal;
-  margin-bottom: 50px;
-  left: 37px;
-  position: relative;
-  letter-spacing: -1px;
+  margin-bottom: 48px;
 }
 
 .contacts__decor {
@@ -46,35 +39,29 @@
   font-size: 22px;
   font-weight: 400;
   line-height: normal;
-  width: 451px;
+  width: 428px;
   height: 49px;
-  left: 46px;
-  position: relative;
 }
 
 .contacts__select-data {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 21px;
+  gap: 16px;
 }
 
 .contacts__e-mail {
-  margin-bottom: 50px;
+  margin-bottom: 31px;
 }
 
 .contacts__button {
   color: var(--main-color-text);
   text-align: center;
-  font-size: clamp(1rem, 0.938rem + 0.31vw, 1.25rem);
+  font-size: 20px;
   font-style: normal;
   font-weight: 500;
   line-height: 30px;
-  padding: 10px 38px;
-  position: relative;
-  left: 46px;
-  top: -20px;
-  letter-spacing: -1px;
+  padding: 9px 39px;
   border-radius: 50px;
   background: var(--color-button-blue);
   box-shadow: 0px 4px 25px 0px var(--box-shaddow);
@@ -83,14 +70,12 @@
 .contacts__p {
   color: var(--main-color-text);
   text-align: center;
-  font-size: clamp(0.688rem, 0.547rem + 0.7vw, 1.25rem);
+  font-size: 20px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  padding-top: 31px;
-  left: 38px;
-  position: relative;
-  letter-spacing: 0.5px;
+  padding-top: 50px;
+  letter-spacing: 1.2px;
 }
 
 .contacts__agreement {
