--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,7 @@
 
 .header {
   position: absolute;
-  padding-top: 27px;
+  padding-top: 40px;
   left: 0;
   right: 0;
   top: 0;
@@ -12,9 +12,6 @@
 .header__logo {
   width: 68px;
   height: 68px;
-  position: relative;
-  right: 18px;
-  top: 3px;
 }
 
 .header__container {
@@ -32,13 +29,9 @@
 .header__number {
   color: var(--main-color-text);
   text-align: center;
-  font-size: clamp(1rem, 0.876rem + 0.61vw, 1.491rem);
+  font-size: 23.85px;
   font-weight: 400;
   line-height: normal;
-  letter-spacing: -1px;
-  position: relative;
-  right: 14px;
-  top: 3px;
 }
 
 .header__call-me {
@@ -49,10 +42,6 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  position: relative;
-  right: 15px;
-  top: 3px;
-  letter-spacing: -1px;
 }
 
 
