--- a/css/var.css
+++ b/css/var.css
@@ -5,6 +5,8 @@
   --color-link: #4A76A8;
   --box-shaddow: rgba(21, 169, 203, 0.30);
   --gray-text: rgba(255, 255, 255, 0.50);
+  --color-subtitle: rgba(255, 255, 255, 0.75);
+  --contacts-sub-txt: rgba(255, 255, 255, 0.80);
 }
 
 /* 
