--- a/css/contacts.css
+++ b/css/contacts.css
@@ -23,7 +23,7 @@
 }
 
 .contacts__subtitle-text {
-  color: var(--main-color-text);
+  color: var(--contacts-sub-txt);
   text-align: center;
   font-size: clamp(0.75rem, 0.594rem + 0.78vw, 1.375rem);
   font-weight: 500;
@@ -50,9 +50,10 @@
   gap: 16px;
 }
 
-.contacts__e-mail {
+/* .contacts__e-mail {
   margin-bottom: 31px;
-}
+} */
+
 
 .contacts__button {
   color: var(--main-color-text);
@@ -65,6 +66,7 @@
   border-radius: 50px;
   background: var(--color-button-blue);
   box-shadow: 0px 4px 25px 0px var(--box-shaddow);
+  margin-top: 32px;
 }
 
 .contacts__p {
@@ -72,7 +74,7 @@
   text-align: center;
   font-size: 20px;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 410;
   line-height: normal;
   padding-top: 50px;
   letter-spacing: 1.2px;
