--- a/css/footer.css
+++ b/css/footer.css
@@ -1,7 +1,7 @@
 .footer {
   background-image: url('../img/background-footer.jpg');
   background: cover;
-  padding: 45px 0;
+  padding: 46px 0;
 }
 
 .footer__company {
@@ -113,6 +113,14 @@
     font-size: 13px;
   }
 
+  .footer__union {
+    gap: 15px;
+  }
+
+  .footer__bunch {
+    gap:25px;
+  }
+
   .footer__made-by {
   display: none;
   }
@@ -142,13 +150,26 @@
 }
 }
 
+@media (max-width: 760px) {
+  .footer__union {
+    gap: 42px; 
+  }
+}
+
 @media (max-width: 320px) {
+
+  .footer__bunch {
+    padding: 0 15px;
+  }
 
   .footer {
     padding: 25px 0;
     max-height: 127px;
   }
 
+  .footer__union {
+    gap: 100px;
+  }
 
   .footer__logo {
     max-width: 30.104px;
