--- a/css/header.css
+++ b/css/header.css
@@ -60,6 +60,22 @@
   }
 }
 
+@media (max-width: 720px) {
+  .header__contacts {
+    content: "";
+    background: url('../img/phone-footer.svg');
+    z-index: 1;
+    width: 60px;
+    height: 50px;
+    background-repeat: no-repeat;
+  }
+  .header__call-me {
+    display: none;
+  }
+  .header__number {
+    display: none;
+  }
+}
 
 @media (max-width: 425px) {
   .header__title-text {
@@ -91,18 +107,8 @@
     display: none;
   }
 
-  .header__contacts::before {
-    content: "";
-    padding-top: 18px;
-    background: url('../img/phone-logo.svg');
-    max-width: 25px;
-    max-height: 24px;
-    background-repeat: no-repeat;
-  }
-
   .header__button {
     line-height: normal;
     padding: 10px 28px;
   }
-
 }
