--- a/css/header.css
+++ b/css/header.css
@@ -14,6 +14,10 @@
   height: 68px;
 }
 
+.header__phone-logo {
+  visibility: hidden;
+}
+
 .header__container {
   margin: 0 auto;
   display: flex;
@@ -61,16 +65,10 @@
 }
 
 @media (max-width: 720px) {
-  .header__contacts {
-    content: "<a href="tel+79509302893"></a>";
-    background: url('../img/phone-footer.svg');
-    z-index: 1;
-    width: 60px;
-    height: 50px;
-    background-repeat: no-repeat;
-    margin-top: 7px;
-  }
 
+  .header__phone-logo {
+    visibility: visible;
+  }
 
   .header__call-me {
     display: none;
